--- a/src/Componentes/Card/styles.css
+++ b/src/Componentes/Card/styles.css
@@ -1,4 +1,3 @@
-
 .card {
     height: 100px;
     width: 50%;
@@ -8,11 +7,14 @@
 
     border-radius: 10px;
     margin-bottom: 20px;
-    
-    display: flex;
-    align-items: center;
 
+    display: flex; 
+    align-items: center;
     justify-content: space-between;
     padding: 24px;
+
+}
+
+.card strong {
     font-size: 18px;
 }
