--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -1,30 +1,29 @@
-
 .container {
     display: flex;
     align-items: center;
     flex-direction: column;
-}
+ }
 
-.container h1 {
-    margin: 84px 0px 44px;
-}
+ .container h1 {
+    margin: 84px 0 24px;
+ }
 
-.container input {
-    width: 47%;
-    padding : 24px;
-    background: #e6e6e6;
-    border-radius: 2%;
+ .container input {
+    width: 50%;
+    padding: 24px;
+    background: #E6E6E6;
+    border-radius: 5px;
     border: none;
     font-size: 16px;
-}
+ }
 
-.container button {
+ .container button {
     width: 50%;
     padding: 24px;
     font-weight: 700;
 
-    background: #ea4c89;
-    color: #e6e6e6;
+    background: #EA4C89;
+    color: #FFFFFF;
 
     border-radius: 5px;
     margin: 12px 0 84px;
@@ -32,8 +31,12 @@
 
     cursor: pointer;
     transition: filter 0.2s;
-}
 
-.container button:hover {
+    font-size: 16px;
+ }
+
+ .container button:hover {
     filter: brightness(0.9);
-}
+ }
+
+ 
